syntax = "proto3";

option csharp_namespace = "ClusterWorkerNode";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

service MathExecuter {
	rpc Execute (MathDataRequest) returns (MathDataResponse);
	rpc SendProgram (SendProgramRequest) returns (SendProgramResponse);
	rpc ExecuteProgram (DataRequest) returns (DataResponse);
}

message SendProgramRequest {
	int32 nodeIndex = 1;
	bytes programBytecode = 2;
}

message SendProgramResponse {
	int32 nodeIndex = 1;
	string successMessage = 2;
}

message DataRequest {
	int32 nodeIndex = 1;
	int32 nodeCount = 2;
	map<string, string> variables = 3;
}

message DataResponse {
	int32 nodeIndex = 1;
	map<string, string> variables = 2;
}

message MathDataRequest {
	int64 index = 1;
	int64 size = 2;
	int32 hardLevel = 3;
	string text = 4;
}

message MathDataResponse {
	string hash = 1;
	int32 nonce = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
